--- a/weather-program/src/styles.scss
+++ b/weather-program/src/styles.scss
@@ -1,14 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 body {
-    margin: 0;
-    padding: 0;
-    background: url('./assets/img/background.png');
-    background-size: cover;
+  margin: 0;
+  padding: 0;
+  background: url("./assets/img/new-bg.jpg");
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  min-height: 100vh;
+  align-items: center;
+}
+@media (max-width: 800px) {
+  body {
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
     display: flex;
-    justify-content: center;
-    height: 100vh;
     align-items: center;
+  }
+}
+@media (max-width: 567px) {
+  .weather-dir-icon {
+      height: 30px !important;
+      width: 30px !important;
+  }
 }
